# ha-todo

./: compose.yml
.githooks/: pre-commit
backend/: .env.example  Cargo.toml  Dockerfile  docker-entrypoint.sh
backend/migrations/: 2025063001_create_table_to_do.sql
backend/src/: config.rs  error.rs  handler.rs  main.rs  model.rs  response.rs  routes.rs
frontend/: next.config.ts  package-lock.json
frontend/src/components/: TodoCard.tsx  TodoInterface.tsx
frontend/src/pages/: index.tsx
